tests/baselines/reference/ClassAndModuleThatMergeWithModulesExportedStaticFunctionUsingClassPrivateStatics.errors.txt
==== tests/cases/conformance/internalModules/DeclarationMerging/ClassAndModuleThatMergeWithModulesExportedStaticFunctionUsingClassPrivateStatics.ts (1 errors) ====
    class clodule<T> {
        id: string;
        value: T;
    
        private static sfn(id: string) { return 42; }
    }
    
    module clodule {
        // error: duplicate identifier expected
        export function fn<T>(x: T, y: T): number {
            return clodule.sfn('a');
                   ~~~~~~~~~~~
!!! error TS2341: Property 'clodule.sfn' is inaccessible.
        }
    }
    
    